[gd_scene load_steps=14 format=2]

[ext_resource path="res://StickyNote.gd" type="Script" id=1]
[ext_resource path="res://scenery/flowerBud.png" type="Texture" id=2]
[ext_resource path="res://scenery/flower.png" type="Texture" id=3]
[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/StickyNotePanelStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/handwriting/Caveat/Caveat-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/handwriting/Permanent_Marker/PermanentMarker-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GUI/hand.png" type="Texture" id=8]
[ext_resource path="res://Hand.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]

size = 32
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]

size = 32
font_data = ExtResource( 7 )

[node name="StickyNote" type="Node2D"]
script = ExtResource( 1 )

[node name="NewNoteButton" type="TextureButton" parent="."]
margin_left = -28.3932
margin_top = -171.616
margin_right = 78.6068
margin_bottom = -44.6156
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="new_note_right" type="TextureButton" parent="."]
margin_left = 90.686
margin_top = -14.4429
margin_right = 123.686
margin_bottom = 24.5571
rect_rotation = 77.9
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="new_note_left" type="TextureButton" parent="."]
margin_left = -86.2435
margin_top = 7.87143
margin_right = -53.2435
margin_bottom = 46.8714
rect_rotation = -116.39
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="new_note_down" type="TextureButton" parent="."]
margin_left = -15.0384
margin_top = 96.1931
margin_right = 17.9616
margin_bottom = 135.193
rect_rotation = 192.71
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="new_note_up" type="TextureButton" parent="."]
margin_left = -66.0
margin_top = -71.0
margin_right = -33.0
margin_bottom = -32.0
rect_rotation = -47.29
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Note" type="Node2D" parent="."]
scale = Vector2( 0.33, 0.33 )

[node name="TextEdit" type="TextEdit" parent="Note"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.55
margin_top = -184.55
margin_right = 190.45
margin_bottom = 190.45
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This is a test"
wrap_enabled = true
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Note"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.55
margin_top = -184.55
margin_right = 190.45
margin_bottom = 190.45
mouse_filter = 2
theme = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "regular test [b]bold test[/b] [i]italics test[/i]"
text = "regular test bold test italics test"

[node name="Hand" type="Sprite" parent="."]
position = Vector2( -0.0397797, 0.281311 )
scale = Vector2( 0.75, 0.8 )
texture = ExtResource( 8 )
offset = Vector2( -128.64, -1.05982 )
script = ExtResource( 9 )

[connection signal="pressed" from="NewNoteButton" to="." method="_on_NewNoteButton_pressed"]
[connection signal="pressed" from="new_note_right" to="." method="_on_new_note_right_pressed"]
[connection signal="pressed" from="new_note_left" to="." method="_on_new_note_left_pressed"]
[connection signal="pressed" from="new_note_down" to="." method="_on_new_note_down_pressed"]
[connection signal="pressed" from="new_note_up" to="." method="_on_new_note_up_pressed"]
[connection signal="gui_input" from="Note/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="mouse_entered" from="Note/TextEdit" to="." method="_on_TextEdit_mouse_entered"]
[connection signal="mouse_exited" from="Note/TextEdit" to="." method="_on_TextEdit_mouse_exited"]
[connection signal="text_changed" from="Note/TextEdit" to="." method="_on_TextEdit_text_changed"]
